--- a/site/index.html
+++ b/site/index.html
@@ -4,6 +4,7 @@
 	<title>Hello coursera</title>
 </head>
 <body>
-<h1>Hello Coursera! It's is my first course on coursera!</h1>
+<h1>Hello Coursera!</h1>
+
 </body>
 </html>
